
syntax = "proto3";

package kaspad;

// The service definition.
service RPC {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc sayRepeatHello(RepeatHelloRequest) returns (stream HelloReply);

  rpc getBlock (BlockRequest) returns (BlockReply) {}
}

message BlockRequest {
  string blockHash = 1;
}
message BlockReply{
  string blockHash = 1;
  repeated string parentBlockHashes = 2;
  int32 version = 4;
  string hashMerkleRoot = 5;
  string acceptedIdMerkleRoot = 6;
  string utxoCommitment = 7;
  int32 timestamp = 8;
  int32 bits = 9;
  int32 nonce = 10;
  string acceptingBlockHash = 11;
  int32 blueScore = 12;
  bool isChainBlock = 13;
  int32 mass = 14;
}
message UTXO{
	uint64 amount = 1;
	string scriptPubKey = 2;
	uint64 blockBlueScore = 3;
	string packedFlags = 4;
}

message UTXOsReply {
  repeated UTXO utxos = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
